# Trovia

./: .gitignore  HANDOFF.md  README.md  TODOS.md  context.md  docker-compose.yml  report.txt
backend/: .env.example  Dockerfile  api-tester.html  package-lock.json  package.json
backend/src/: index.ts
backend/src/agents/: business.ts  content.ts  farming.ts  farming_pools_seed.sql  rebalancing.ts  scheduling.ts  trading.ts
backend/src/cron/: scheduling.ts
backend/src/lib/: gemini.ts  solana.ts  supabase.ts
backend/src/routes/: agents.ts  analytics.ts  docs.ts  messaging.ts  reviews.ts  voice.ts
contracts/: Anchor.toml  Cargo.toml
contracts/idl/: agent_escrow.json  agent_executor.json  agent_registry.json
contracts/programs/agent_escrow/: Cargo.toml
contracts/programs/agent_escrow/src/: lib.rs
contracts/programs/agent_executor/: Cargo.toml
contracts/programs/agent_executor/src/: lib.rs
contracts/programs/agent_registry/: Cargo.toml
contracts/programs/agent_registry/src/: lib.rs
frontend/: .env.local.example  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/publish/: page.tsx
frontend/components/: AgentCard.tsx  Nav.tsx  VoicePanel.tsx  WalletConnect.tsx  WalletProvider.tsx
frontend/lib/: contracts.ts  wallet.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentCard.tsx  AgentIcon.tsx  Footer.tsx  (+6 more)
prd/: byteprd.md
(+5 files in other folders)
