[package]
name = "agent_escrow"
version = "0.1.0"
description = "Trovia Agent Escrow — handles SOL payments and activation PDAs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
