[package]
name = "agent_executor"
version = "0.1.0"
description = "Trovia Agent Executor — logs execution results on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_executor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
